--- a/api_notebook.ipynb
+++ b/api_notebook.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\44594722\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3058: DtypeWarning: Columns (10,11,13) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "dataset_completo = pd.read_csv(\"https://cdn.buenosaires.gob.ar/datosabiertos/datasets/salud/casos-covid-19/casos_covid19.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,82 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def nuevos_casos_caba_dia(dia):\n",
-    "    cant_casos = dataset_completo_caba_confirmados[dataset_completo_caba_confirmados[\"id_dia\"]==dia]\n",
-    "    return {dia: len(cant_casos)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def nuevos_casos_caba_rango(desde,hasta = None):\n",
-    "    dict_cant_casos = {}\n",
-    "    in_range = False\n",
-    "    for i in dataset_completo_caba_confirmados[\"id_dia\"]:\n",
-    "        if i == desde:\n",
-    "            in_range = True\n",
-    "        if i == hasta:\n",
-    "            in_range = False\n",
-    "        if in_range:\n",
-    "            dict_cant_casos[i]=dict_cant_casos.get(i,0)+1\n",
-    "    return dict_cant_casos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'05/11': 486}"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nuevos_casos_caba_dia(\"05/11\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'01/11': 274,\n",
-       " '02/11': 416,\n",
-       " '03/11': 463,\n",
-       " '04/11': 360,\n",
-       " '05/11': 486,\n",
-       " '06/11': 122}"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nuevos_casos_caba_rango(\"01/11\",None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +89,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def nuevos_casos_caba_dia(dia):\n",
+    "    cant_casos = dataset_completo_caba_confirmados[dataset_completo_caba_confirmados[\"id_dia\"]==dia]\n",
+    "    return {dia: len(cant_casos)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nuevas_muertes_caba_dia(dia):\n",
+    "    cant_muertes = dataset_completo_caba_muertes[dataset_completo_caba_muertes[\"id_dia_muerte\"]==dia]\n",
+    "    return {dia: len(cant_muertes)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nuevos_casos_caba_rango(desde=\"16/2\",hasta = None):\n",
+    "    dict_cant_casos = {}\n",
+    "    in_range = False\n",
+    "    for i in dataset_completo_caba_confirmados[\"id_dia\"]:\n",
+    "        if i == desde:\n",
+    "            in_range = True\n",
+    "        if i == hasta:\n",
+    "            in_range = False\n",
+    "        if in_range:\n",
+    "            dict_cant_casos[i]=dict_cant_casos.get(i,0)+1\n",
+    "    return dict_cant_casos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nuevas_muertes_caba_rango(desde=\"07/3\",hasta = None):\n",
+    "    dict_cant_muertes = {}\n",
+    "    in_range = False\n",
+    "    for i in dataset_completo_caba_muertes[\"id_dia_muerte\"]:\n",
+    "        if i == desde:\n",
+    "            in_range = True\n",
+    "        if i == hasta:\n",
+    "            in_range = False\n",
+    "        if in_range:\n",
+    "            dict_cant_muertes[i]=dict_cant_muertes.get(i,0)+1\n",
+    "    return dict_cant_muertes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'05/11': 486}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevos_casos_caba_dia(\"05/11\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'06/11': 2}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevas_muertes_caba_dia(\"06/11\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'01/11': 274,\n",
+       " '02/11': 416,\n",
+       " '03/11': 463,\n",
+       " '04/11': 360,\n",
+       " '05/11': 486,\n",
+       " '06/11': 122}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevos_casos_caba_rango(\"01/11\",None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'01/11': 13, '02/11': 8, '03/11': 10, '04/11': 6, '05/11': 5, '06/11': 2}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevas_muertes_caba_rango(\"01/11\",None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5221"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
