--- a/api_notebook.ipynb
+++ b/api_notebook.ipynb
@@ -40,215 +40,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_completo_caba = dataset_completo[dataset_completo[\"provincia\"]==\"CABA\"].copy()\n",
-    "dataset_completo_caba[\"mes_confirmado\"] = dataset_completo_caba[\"fecha_clasificacion\"].str[2:5]\n",
-    "dataset_completo_caba[\"dia_confirmado\"] = dataset_completo_caba[\"fecha_clasificacion\"].str[:2]\n",
-    "meses_replace = {\"JAN\":1,\"FEB\":2,\"MAR\":3,\"APR\":4,\"MAY\":5,\"JUN\":6,\"JUL\":7,\"AUG\":8,\"SEP\":9,\"OCT\":10,\"NOV\":11,\"DEC\":12}\n",
-    "dataset_completo_caba[\"mes_confirmado_num\"] = dataset_completo_caba[\"mes_confirmado\"].replace(meses_replace)\n",
-    "dataset_completo_caba = dataset_completo_caba.sort_values([\"mes_confirmado_num\", \"dia_confirmado\"])\n",
-    "dataset_completo_caba[\"mes_confirmado_num\"] = dataset_completo_caba[\"mes_confirmado_num\"].astype(str)\n",
-    "dataset_completo_caba[\"id_dia\"] = dataset_completo_caba[\"dia_confirmado\"].map(str) +\"/\"+dataset_completo_caba[\"mes_confirmado_num\"].map(str)"
+    "meses_replace = {\"JAN\":\"01\",\"FEB\":\"02\",\"MAR\":\"03\",\"APR\":\"04\",\"MAY\":\"05\",\"JUN\":\"06\",\"JUL\":\"07\",\"AUG\":\"08\",\"SEP\":\"09\",\"OCT\":\"10\",\"NOV\":\"11\",\"DEC\":\"12\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_completo_caba_confirmados = dataset_completo_caba[dataset_completo_caba[\"clasificacion\"]==\"confirmado\"].copy()"
+    "dataset_completo_procesado = dataset_completo.copy()\n",
+    "####################################### CREAMOS LA COLUMNA DEL DIA DE CLASIFICACION ########################################\n",
+    "mes_clasificacion = dataset_completo_procesado[\"fecha_clasificacion\"].str[2:5].replace(meses_replace)\n",
+    "dia_clasificacion = dataset_completo_procesado[\"fecha_clasificacion\"].str[:2]\n",
+    "dataset_completo_procesado[\"mes/dia\"] = mes_clasificacion.map(str) +\"/\"+ dia_clasificacion.map(str)\n",
+    "#################################################################################################################\n",
+    "\n",
+    "################################## CREAMOS LA COLUMNA DEL DIA DE LA MUERTE ##################################################\n",
+    "mes_muerte = dataset_completo_procesado[\"fecha_fallecimiento\"].str[2:5].replace(meses_replace)\n",
+    "dia_muerte = dataset_completo_procesado[\"fecha_fallecimiento\"].str[:2]\n",
+    "dataset_completo_procesado[\"mes/dia_fallecimiento\"] = mes_muerte.map(str) +\"/\"+ dia_muerte.map(str)\n",
+    "#############################################################################################################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_completo_caba_muertes = dataset_completo_caba_confirmados.copy()[dataset_completo_caba_confirmados[\"fallecido\"]==\"si\"]"
+    "#################################### AQUI UTILIZAREMOS DISTINTOS CRITERIOS PARA SORTEAR EL DATASET ##########################\n",
+    "dataset_completo_procesado_sorted_clasificacion = dataset_completo_procesado.copy().sort_values(\"mes/dia\")\n",
+    "dataset_completo_procesado_sorted_muerte = dataset_completo_procesado.copy().sort_values(\"mes/dia_fallecimiento\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_completo_caba_muertes[\"mes_muerte\"] = dataset_completo_caba_muertes[\"fecha_fallecimiento\"].str[2:5]\n",
-    "dataset_completo_caba_muertes[\"dia_muerte\"] = dataset_completo_caba_muertes[\"fecha_fallecimiento\"].str[:2]\n",
-    "meses_replace = {\"JAN\":1,\"FEB\":2,\"MAR\":3,\"APR\":4,\"MAY\":5,\"JUN\":6,\"JUL\":7,\"AUG\":8,\"SEP\":9,\"OCT\":10,\"NOV\":11,\"DEC\":12}\n",
-    "dataset_completo_caba_muertes[\"mes_muerte_num\"] = dataset_completo_caba_muertes[\"mes_muerte\"].replace(meses_replace)\n",
-    "dataset_completo_caba_muertes = dataset_completo_caba_muertes.sort_values([\"mes_muerte_num\", \"dia_muerte\"])\n",
-    "dataset_completo_caba_muertes[\"mes_muerte_num\"] = dataset_completo_caba_muertes[\"mes_muerte_num\"].astype(str)\n",
-    "dataset_completo_caba_muertes[\"id_dia_muerte\"] = dataset_completo_caba_muertes[\"dia_muerte\"].map(str) +\"/\"+dataset_completo_caba_muertes[\"mes_muerte_num\"].map(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def nuevos_casos_caba_dia(dia):\n",
-    "    cant_casos = dataset_completo_caba_confirmados[dataset_completo_caba_confirmados[\"id_dia\"]==dia]\n",
+    "def nuevos_casos_caba_dia(dia, residentes = True):\n",
+    "    filtro = dataset_completo_procesado.copy()\n",
+    "    if residentes:\n",
+    "        filtro = filtro[filtro[\"provincia\"]==\"CABA\"]\n",
+    "    confirmados = filtro[filtro[\"clasificacion\"]==\"confirmado\"]\n",
+    "    cant_casos = confirmados[confirmados[\"mes/dia\"]==dia]\n",
     "    return {dia: len(cant_casos)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nuevas_muertes_caba_dia(dia):\n",
-    "    cant_muertes = dataset_completo_caba_muertes[dataset_completo_caba_muertes[\"id_dia_muerte\"]==dia]\n",
+    "def nuevas_muertes_caba_dia(dia, residentes = True):\n",
+    "    filtro = dataset_completo_procesado.copy()\n",
+    "    if residentes:\n",
+    "        filtro = filtro[filtro[\"provincia\"]==\"CABA\"]\n",
+    "    muertes = filtro[filtro[\"fallecido\"]==\"si\"]\n",
+    "    cant_muertes = muertes[muertes[\"mes/dia_fallecimiento\"]==dia]\n",
     "    return {dia: len(cant_muertes)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nuevos_casos_caba_rango(desde=\"16/2\",hasta = None):\n",
-    "    dict_cant_casos = {}\n",
-    "    in_range = False\n",
-    "    for i in dataset_completo_caba_confirmados[\"id_dia\"]:\n",
-    "        if i == desde:\n",
-    "            in_range = True\n",
-    "        if i == hasta:\n",
-    "            in_range = False\n",
-    "        if in_range:\n",
-    "            dict_cant_casos[i]=dict_cant_casos.get(i,0)+1\n",
-    "    return dict_cant_casos"
+    "def nuevos_casos_caba_rango(desde=\"0\",hasta=\"3000\", residentes = True):\n",
+    "    filtro = dataset_completo_procesado_sorted_clasificacion.copy()\n",
+    "    if residentes:\n",
+    "        filtro = filtro[filtro[\"provincia\"]==\"CABA\"]\n",
+    "    confirmados = filtro[filtro[\"clasificacion\"]==\"confirmado\"]\n",
+    "    confirmados_dict = {}\n",
+    "    for i in confirmados[\"mes/dia\"]:\n",
+    "        if desde <= i < hasta:\n",
+    "            confirmados_dict[i] = confirmados_dict.get(i,0) + 1 \n",
+    "    return confirmados_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nuevas_muertes_caba_rango(desde=\"07/3\",hasta = None):\n",
-    "    dict_cant_muertes = {}\n",
-    "    in_range = False\n",
-    "    for i in dataset_completo_caba_muertes[\"id_dia_muerte\"]:\n",
-    "        if i == desde:\n",
-    "            in_range = True\n",
-    "        if i == hasta:\n",
-    "            in_range = False\n",
-    "        if in_range:\n",
-    "            dict_cant_muertes[i]=dict_cant_muertes.get(i,0)+1\n",
-    "    return dict_cant_muertes"
+    "def nuevas_muertes_caba_rango(desde=\"0\",hasta=\"3000\", residentes = True):\n",
+    "    filtro = dataset_completo_procesado_sorted_muerte.copy()\n",
+    "    if residentes:\n",
+    "        filtro = filtro[filtro[\"provincia\"]==\"CABA\"]\n",
+    "    muertes = filtro[filtro[\"fallecido\"]==\"si\"]\n",
+    "    muertes_dict = {}\n",
+    "    for i in muertes[\"mes/dia_fallecimiento\"]:\n",
+    "        if desde <= i < hasta:\n",
+    "            muertes_dict[i] = muertes_dict.get(i,0) + 1 \n",
+    "    return muertes_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lo que viene a continuacion son pruebas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'05/11': 486}"
+       "{'11/15': 32}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nuevos_casos_caba_dia(\"05/11\")"
+    "nuevos_casos_caba_dia(\"11/15\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'06/11': 2}"
+       "{'11/10': 15, '11/11': 9, '11/12': 6, '11/13': 1, '11/14': 4, '11/15': 1}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nuevas_muertes_caba_dia(\"06/11\")"
+    "nuevas_muertes_caba_rango(\"11/10\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'01/11': 274,\n",
-       " '02/11': 416,\n",
-       " '03/11': 463,\n",
-       " '04/11': 360,\n",
-       " '05/11': 486,\n",
-       " '06/11': 122}"
+       "{'11/12': 426, '11/13': 375, '11/14': 267, '11/15': 32}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nuevos_casos_caba_rango(\"01/11\",None)"
+    "nuevos_casos_caba_rango(\"11/12\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testeos_dia = dataset_completo[dataset_completo[\"fecha_clasificacion\"]==\"12NOV2020:00:00:00.000000\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confirmados_dia = testeos_dia[testeos_dia[\"clasificacion\"]==\"confirmado\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'01/11': 13, '02/11': 8, '03/11': 10, '04/11': 6, '05/11': 5, '06/11': 2}"
+       "426"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nuevas_muertes_caba_rango(\"01/11\",None)"
+    "len(confirmados_dia[confirmados_dia[\"provincia\"]==\"CABA\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "muertes_dia = dataset_completo[dataset_completo[\"fecha_fallecimiento\"]==\"12NOV2020:00:00:00.000000\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5221"
+       "6"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "len(muertes_dia[muertes_dia[\"provincia\"]==\"CABA\"])"
+   ]
   },
   {
    "cell_type": "code",
@@ -274,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
